src/App.css
body {
  background-color: #282c34 !important;
}

.project-deck .card {
  margin-bottom: 15px;
}

@media (min-width: 576px) {
  .project-deck {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-flow: row wrap;
    flex-flow: row wrap;
    margin-right: -15px;
    margin-left: -15px;
  }
  .project-deck .card {
    -ms-flex: 1 0 0%;
    flex: 1 0 0%;
    margin-right: 15px;
    margin-bottom: 0;
    margin-left: 15px;
  }
}

.projects-home {
  margin-bottom: 5%;
}

.projects-home a {
  color: #61afef;
}

.projects-home h1 {
  margin-bottom: 1rem;
}

.project-card {
  color: white !important;
  background-color: #282c34 !important;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.skills-home {
  margin-bottom: 5%;
}

.progress-bar {
  background-color: #98c379 !important;
}

.col-sm {
  margin-bottom: 2rem;
}

.home {
  min-height: 600px;
  margin-bottom: 5%;
}

.aboutme-para {
  top: 425px;
  float: left;
  font-size: 20px;
  position: absolute;
  z-index: 1;
  text-align: left;
  font-weight: bold;
  max-width: 500px;
  justify-content: center;
}

.home-title {
  top: 250px;
  float: left;
  font-size: 63px;
  position: absolute;
  z-index: 1;
  text-align: left;
  font-weight: bold;
  max-width: 500px;
  justify-content: center;
  white-space: pre-wrap !important;
}

.home img {
  height: 600px;
  width: 600px;
  float: right;
  border-radius: 0px !important;
  box-shadow: -20px 20px #61afef;
}

.content {
  max-width: 90%;
  margin: auto;
  color: white;
}

.color-nav {
  background-color: #282c34 !important;
  padding-right: 0px !important;
}

.App {
  background-color: #282c34;
}

.App-logo {
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  text-align: center;
  white-space: pre-wrap !important;
}

.nav-link {
  margin: 0.5rem;
}

.blinking {
  animation: blinkingText 1.2s infinite;
}

.arrow-button {
  height: 35px;
  width: 35px;
  outline: none;
  margin-top: 1px;
}

.fade-in {
  animation: fadeIn ease 3s;
  -webkit-animation: fadeIn ease 3s;
  -moz-animation: fadeIn ease 3s;
  -o-animation: fadeIn ease 3s;
  -ms-animation: fadeIn ease 3s;
}

.fade-out {
  animation: fadeOut ease 1s;
  -webkit-animation: fadeOut ease 1s;
  -moz-animation: fadeOut ease 1s;
  -o-animation: fadeOut ease 1s;
  -ms-animation: fadeOut ease 1s;
}

/*Ipad Pro */

@media only screen and (max-width: 1180px) {
  .content {
    padding-top: 5%;
  }
  .home {
    zoom: 0.7;
    -moz-transform: scale(0.7);
  }
  .home-title {
    top: 300px;
  }
  .aboutme-para {
    top: 500px;
  }
}

/* Ipad and lower */

@media only screen and (max-width: 850px) {
  .App-header h1 {
    font-size: 1.5rem !important;
  }
  .App-header input {
    height: 25px;
    width: 25px;
  }
  .arrow-button {
    margin-top: 2px;
  }
  .home {
    margin-top: 17%;
    overflow: hidden;
    margin-bottom: 20%;
  }
  .home img {
    float: none;
    width: 80%;
    height: 80%;
  }
  .home-title {
    padding-right: 10%;
    float: none;
    margin-top: 8%;
    font-size: 7vh;
    position: static;
    text-align: right;
    max-width: 100%;
  }
  .aboutme-para {
    float: none;
    position: static;
    margin-top: 12%;
    text-align: center;
    font-size: calc(5vmin);
    max-width: 100%;
  }
}

/* Annoying tall phones */

@media only screen and (min-height: 750px) and (max-width: 767px) {
  .home {
    margin-top: 35%;
    margin-bottom: 42%;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-moz-keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-o-keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-ms-keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes blinkingText {
  0% {
    color: white;
  }
  49% {
    color: white;
  }
  60% {
    color: transparent;
  }
  99% {
    color: transparent;
  }
  100% {
    color: white;
  }
}

